src/test/ui/feature-gate-plugin_registrar.stderr
error[E0658]: compiler plugins are experimental and possibly buggy (see issue #29597)
  --> $DIR/feature-gate-plugin_registrar.rs:16:1
   |
LL | pub fn registrar() {}
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(plugin_registrar)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
